--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,14 +1,62 @@
-html, body {
+html,
+body {
   margin: 0;
 }
 
 body::after {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0;
   background-color: #f3fcfa;
   opacity: 0.1;
-  background-image:  linear-gradient(30deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(150deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(30deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(150deg, #1abc9c 12%, transparent 12.5%, transparent 87%, #1abc9c 87.5%, #1abc9c), linear-gradient(60deg, #1abc9ccc 25%, transparent 25.5%, transparent 75%, #1abc9ccc 75%, #1abc9ccc), linear-gradient(60deg, #1abc9ccc 25%, transparent 25.5%, transparent 75%, #1abc9ccc 75%, #1abc9ccc);
+  background-image: linear-gradient(
+      30deg,
+      #1abc9c 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #1abc9c 87.5%,
+      #1abc9c
+    ),
+    linear-gradient(
+      150deg,
+      #1abc9c 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #1abc9c 87.5%,
+      #1abc9c
+    ),
+    linear-gradient(
+      30deg,
+      #1abc9c 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #1abc9c 87.5%,
+      #1abc9c
+    ),
+    linear-gradient(
+      150deg,
+      #1abc9c 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #1abc9c 87.5%,
+      #1abc9c
+    ),
+    linear-gradient(
+      60deg,
+      #1abc9ccc 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #1abc9ccc 75%,
+      #1abc9ccc
+    ),
+    linear-gradient(
+      60deg,
+      #1abc9ccc 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #1abc9ccc 75%,
+      #1abc9ccc
+    );
   background-size: 40px 70px;
   background-position: 0 0, 0 0, 20px 35px, 20px 35px, 0 0, 20px 35px;
   pointer-events: none;
@@ -29,14 +77,20 @@ header {
   }
 }
 
-h1, h2, h3, h4, h5, h6,
-p
-{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
 }
 
 ul {
+  margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 button {
@@ -76,6 +130,7 @@ button {
 }
 
 .c-questioItem {
+  position: relative;
   display: block;
   flex: none;
   min-width: 3em;
@@ -86,6 +141,45 @@ button {
   border-color: #77b36e;
   border-style: solid;
   border-radius: 8px;
+  transition: all 0.1s ease;
+  z-index: 0;
+
+  &::before {
+    content: '';
+    inset: 0;
+    position: absolute;
+    border-radius: inherit;
+  }
+
+  &.selected {
+    color: #39a928;
+  }
+
+  &.selected::before {
+    inset: -4px;
+    border: inherit;
+    border-width: 5px;
+    z-index: -1;
+  }
+}
+
+.c-nextButton {
+  display: block;
+  margin-top: 24px;
+  margin-inline: auto;
+  padding: 16px 40px;
+  font-size: 1em;
+  color: #fff;
+  font-weight: 700;
+  background-color: #3fa330;
+  border: 2px solid #1c8c0c;
+  border-radius: 8px;
+  text-decoration: none;
+
+  &.c-nextButton {
+    background-color: #3fa330;
+    border: 2px solid #1c8c0c;
+  }
 }
 
 .c-answerTitle {
@@ -110,12 +204,12 @@ button {
   z-index: 0;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     inset: -10px;
     background-color: #fff;
     filter: blur(16px);
-    opacity: .8;
+    opacity: 0.8;
     z-index: -1;
   }
 
@@ -128,7 +222,7 @@ button {
     min-width: 6em;
 
     &::before {
-      content: '：';
+      content: "：";
       position: absolute;
       top: 0;
       bottom: 0;
@@ -136,6 +230,12 @@ button {
       font-weight: 400;
     }
   }
+}
+
+.c-answerTextList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px 8px;
 
   .text {
     font-weight: 400;
