--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -97,12 +97,18 @@ button {
   cursor: pointer;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
 .c-block {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 160px);
 }
 
 .c-btn {
@@ -117,7 +123,7 @@ button {
 
 .c-questionTitle {
   width: 100%;
-  margin: 40px 0 -40px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
@@ -165,7 +171,7 @@ button {
 
 .c-nextButton {
   display: block;
-  margin-top: 24px;
+  margin-top: 32px;
   margin-inline: auto;
   padding: 16px 40px;
   font-size: 1em;
@@ -184,6 +190,7 @@ button {
 
 .c-answerTitle {
   width: 100%;
+  margin-bottom: 40px;
   text-align: center;
 }
 
