--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -113,13 +113,21 @@ main {
 }
 
 .c-btn {
-  padding: 20px;
-  color: #fff;
-  font-weight: 700;
-  background-color: #3fa330;
-  border: 2px solid #1c8c0c;
-  border-radius: 8px;
-  text-decoration: none;
+  & {
+    display: inline-block;
+    padding: 20px;
+    color: #fff;
+    font-weight: 700;
+    background-color: #3fa330;
+    border: 2px solid #1c8c0c;
+    border-radius: 8px;
+    text-decoration: none;
+  }
+  &__wrap {
+    display: flex;
+    margin-top: 32px;
+    gap: 10px;
+  }
 }
 
 .c-questionTitle {
@@ -134,6 +142,11 @@ main {
   justify-content: center;
   align-self: flex-start;
   gap: 10px;
+  width: 100%;
+
+  & + .c-btn {
+    margin-top: 24px;
+  }
 }
 
 .c-questioItem {
